Added bit rotation code

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-# add_executable(appName main.cpp)
+add_executable(bit_rotation bit_rotation.c)
 
 # Added dependencies (headers and such)
 # target_link_libraries()
