--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,10 @@ edition = "2021"
 name = "check_param_ref"
 path = "src/bin/check_param_ref.rs"
 
+[[bin]]
+name = "bit_rotation"
+path = "src/bin/bit_rotation.rs"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
